Moved pages in `_pages` directory

--- a/_pages/2017-gallery.html
+++ b/_pages/2017-gallery.html
@@ -1,4 +1,5 @@
 ---
+permalink: "2017-gallery"
 layout: default
 title: 2017 Gallery
 css: ['node-assets/lightgallery.js/dist/css/lightgallery.min.css']
