--- a/_pages/index.html
+++ b/_pages/index.html
@@ -1,4 +1,5 @@
 ---
+permalink: "/"
 layout: default
 ---
 
@@ -37,7 +38,7 @@ layout: default
   </div>
 </section>
 
-<section class="rellax home-section home-section-parallax-bg" data-rellax-speed="-5" data-rellax-percentage="0.5">
+<section class="rellax home-section home-section-parallax-bg" data-rellax-speed="-5" data-rellax-percentage="0.45">
 </section>
 
 <section class="home-section">
