--- a/_pages/index.html
+++ b/_pages/index.html
@@ -23,6 +23,8 @@ layout: default
     <ul>
       <h2>How does Hear We Art work?</h2>
 
+      <p class="no-margin">By improving the knowledge of the teachers and integrating locals with the right vocational skills, give the school the ability to run future workshops and training on their own, in future.</p>
+
       <li>Using recycled materials such as newspaper, plastic lids, used containers, cardboard therefore learning about eco-friendly art and sustainability.</li>
 
       <li>Full, hands-on induction for the teachers and pupils to GIMP Graphic Design software, as specifically requested by the school board.</li>
@@ -45,11 +47,11 @@ layout: default
   <div class="content-container">
     <h2>Senkadagala School of Deaf and Blind</h2>
 
-    <p>Hear we Art workshop has been developed specifically for Senkadagala school of Deaf and Blind. The school is composed by 87 deaf students and 5 blind students and has been funded in 1962, by a blind teacher, Rienzie Alagiyawanna. The school is public and the children have free access and healthcare once they get in.</p>
+    <p>The Hear We Art workshops has been developed specifically for Senkadagala school for Deaf and Blind children. The school is comprises 87 deafand 5 blind students and was founded in 1962, by a blind teacher, Rienzie Alagiyawanna. It is a public school which gives the children free schooling and free access and to healthcare.</p>
 
-    <p>The school has to follow national curriculum so they need to study as regular education students in Sri Lanka. This means that the children <strong>have to learn to read and write as well as learning deaf language</strong>. In the school they also learn English and international deaf language. Most of the children struggle in keeping up with theoretical subjects but they are very talented in art and expressive classes. Therefore, after school, students get to access practical jobs and only few are able to get to further education.</p>
+    <p>The school, and therefore the children have to follow the Sri Lankan national curriculum, which includes reading and writing, <strong>as well as</strong> learning deaf language, English and international deaf language. Most of the children struggle to keep-up with theoretical subjects, however, many of them are very talented in art and creative subjects, which unfortunately have no place in the normal curriculum. The children usually leave school with poor academic results because the curriculum is not adapted to their disabilities consequently few are able to get go on to further education. And with little, if any, vocational training, the great majority have to get unskilled, very poorly paid work, if they find anything at all.</p>
 
-    <p class="heavy-margin-bottom">To meet the children natural abilities, the school board have decided to introduce a few afternoon classes, lead by volunteering tutors on subjects such as computer, photography, graphic design, woodcarving and dress making.</p>
+    <p class="heavy-margin-bottom">To meet help the children develop and capitalize on their natural creative abilities, the school board have decided to introduce a few afternoon classes led by volunteer tutors in subjects such as computer, photography, graphic design, woodcarving and dress making. But often the teachers have quite limited knowledge and experience of teaching these subjects.</p>
   </div>
 </section>
 
