--- a/_pages/who-we-are.html
+++ b/_pages/who-we-are.html
@@ -6,11 +6,11 @@ title: Who We Are
 
 <div class="bg-light-gray">
   <div class="content-container">
-    <h2>The Team</h2>
+    <h2>The <em>Hear We Art</em> Team</h2>
 
-    <p>We are a group of artists, creatives and designers working together to create workshop tailored to students with visual and hearing impairments.</p>
+    <p>We are a group of artists, creatives and designers who working together to create workshops tailored to the needs of students with visual and hearing impairments.</p>
 
-    <p>The project is coordinated by Olga Hendel and has been developed by Sekme Art Lab (an international group of artists working toghether as a collective). The collective is composed by professional creative practitioners together with artists who have years of experience in teaching disadvantaged young people in UK, Italy, India and Australia and are joining forces to give life to a very comprehensive project that will include the Arts in many different forms: Graphic Design, Craft Making and Mural Art.</p>
+    <p>The Hear We Art project leader is Olga Hendel. The programmes have been developed by Sekme Art Lab (international group fo artist) and Studio Arco (an Italian Ong). The group is is made up of professional creative practitioners and artists with years of experience in teaching disadvantaged young people in UK, Italy, India and Australia. We have joined forces to create a comprehensive set of workshops which include the Arts in many different forms: Graphic Design, Craft Making and Mural Art. Nigel Bartram helped develop and finance the original Hear We Art concept and continues to support the project out of a wish to help, directly, children in need, especially those who must overcome disabilities and require support to have any chance of living a fulfilled life.</p>
 
     <p class="heavy-margin-bottom">The project is endorsed by Nigel Bartram, a philanthropist who is dedicating his life to help children in need. Nigel is the director of school in Paris and is now working towards setting up a UK charity.</p>
   </div>
@@ -18,10 +18,14 @@ title: Who We Are
 
 <div class="content-container font-weight-light">
 
-  <h4 class="uppercase no-margin-top light-gray font-weight-normal">Project Coordinator</h4>
+  <h4 class="uppercase no-margin-top light-gray font-weight-normal">Project Leader</h4>
   <h2 class="dark-gray font-weight-normal">Olga Hendel</h2>
 
-  <p class="no-margin heavy-margin-bottom pure-u-1 pure-u-md-1-2">Olga Hendel graduated from Camberwell College of Arts in 2015. She has been working since then as a freelancer artist in Rome. In 2012 she co-founded IdenticonArts, a LdT community interest company based in London whose objective is to work with disadvantaged groups fromyoung to elderly people to encourage self expression through art and craft making. Some of her workshops include Skills Show Birmingham Festival, Art for inclusion in Ukrain and Sp8 of the Arts London. She also curated the independent publication project QUIET! Magazine, Homegrown festival in Brixton and AR.CO laboratory. In 2016 Olga moved to Rome where she applied to Art Therapies Master Diploma in University of Roma Tre, to continue sharing her passion and love of art with people creating interesting and beautiful outcomes.</p>
+  <div class="no-margin heavy-margin-bottom pure-u-1 pure-u-md-1-2">
+    <p class="no-margin">Olga Hendel graduated from Camberwell College of Arts in 2015. She has been working since then as a freelancer artist in Rome. In 2012 she co-founded IdenticonArts, a LdT Community Interest Company, based in London, whose objective is was to work with disadvantaged groups, from young through to the elderly, encouraging self-expression through art and craft making. Among her workshops were the Skills Show at the Birmingham Festival, Art for inclusion in Ukraine and Sp8 of for the Arts London. She also curated a project which produced the QUIET! Magazine, participated in the Homegrown festival in Brixton.</p>
+
+    <p class="no-margin medium-margin-top">In 2016, Olga visited Sri Lanka to look for underprivileged groups of children who could potentially benefit from Art, Handicraft and Design workshops and met the Principal of the Senkadagala School. Discussions led to the development of Hear We Art. In 2017 Olga, led the team (comprising herself, Alessia and Morgan) which piloted the Hear We Art Workshops.</p>
+  </div>
 
   <section class="pure-u-1 pure-u-sm-2-3 pure-u-md-5-12 float-right-md">
     <img
@@ -33,7 +37,7 @@ title: Who We Are
   <h4 class="uppercase no-margin-top light-gray font-weight-normal">Graphic Design Tutor</h4>
   <h2 class="dark-gray font-weight-normal">Alessia Arcuri</h2>
 
-  ​<p class="no-margin heavy-margin-bottom pure-u-1 pure-u-md-1-2">Alessia Arcuri is an Italian graphic designer based in London. Alessia agraduated with a First Class Honours for the BA(Hons) in Graphic and Media Design at London College of Communication (University of the Arts) in 2016. Alessia’s design practice is cross-media, both analogue and digital. She currently works on a variety of fields including online and offline editorial design, brand identity, web design and animation. She worked as an Assistant Technicians in London College of Communication 3D Workshop during the Spring Semester 2017 - where she gained further expertise with Laser Cutting Machine, Job Control Pro and Illustrator. She is now working as a Lead Designer and Art Director for Screen Shot Magazine, curating the design for both the online and offline version of the editorial platform. Alessia also worked for Tate Modern London designing  the poster programme for Future Medina Workshop in late 2016. Other clients and collaborations includes: London Science Museum, Jungle Creations and Downstairs Collective.</p>
+  ​<p class="no-margin heavy-margin-bottom pure-u-1 pure-u-md-1-2">Alessia Arcuri is an Italian graphic designer based in London. She graduated with a First Class Honours degree in Graphic and Media Design at from the London College of Communication (University of the Arts) in 2016. Alessia’s design practice is cross-media, both analogue and digital. She currently works on in a variety of fields, including online and offline editorial design, brand identity, web design and animation. She worked as an Assistant Technicians in London College of Communication 3D Workshop during the Spring Semester of 2017 - where she gained further expertise with Laser Cutting Machine, Job Control Pro and Illustrator. She is now working as a Lead Designer and Art Director for Screen Shot Magazine, curating the design for both the online and offline versions of the editorial platform. Alessia also worked for Tate Modern London designing the poster programme for Future Medina Workshop in late 2016. Other clients and collaborations includes: London Science Museum, Jungle Creations and Downstairs Collective.</p>
 
   <section class="pure-u-1 pure-u-sm-2-3 pure-u-md-5-12 float-right-md">
     <img
@@ -45,7 +49,7 @@ title: Who We Are
   <h4 class="uppercase no-margin-top light-gray font-weight-normal">Art Tutor and Mural Artist</h4>
   <h2 class="dark-gray font-weight-normal">Morganico</h2>
 
-  <p class="no-margin heavy-margin-bottom pure-u-1 pure-u-md-1-2">Morganico is a British artist working in London since 1996 producing large scale murals for the London councils of Southwark, Lambeth and Hillingdon and a variety of other clients &amp; personal street art projects having started in a graffiti background as a youth. He is one of the selected 4000 international artists to join the prestigious Chelsea Art Club started in the Victorian era by James McNeil Whistler of the pre-Raphaelites fame. His most recent large scale tree carving sculpture is located outside The Imperial War museum next to the Tibetan peace garden opened by the Dalai Lama in 1999 , the sculpture based on the theme of peace also . He also makes spray paint workshops with school children for entertainment agencies.</p>
+  <p class="no-margin heavy-margin-bottom pure-u-1 pure-u-md-1-2">Morganico is a British artist having who started from a graffiti background as a youth. He has been working in London since 1996, producing large scale public murals for the London councils Boroughs of Southwark, Lambeth and Hillingdon, plus and a variety of other clients & personal street art projects. He is one of the international artists selected to join the prestigious Chelsea Art Club, which set up started in the Victorian time by James McNeil Whistler of the pre-Raphaelites fame. His most recent large scale tree carving sculpture is located outside The Imperial War museum, next to the Tibetan peace garden opened by the Dalai Lama in 1999 , Tthe sculpture is based on the theme of peace also. Morganico also conducts spray paint workshops with school children for entertainment agencies.</p>
 
   <section class="pure-u-1 pure-u-sm-2-3 pure-u-md-5-12 float-right-md">
     <img
