--- a/_pages/2017-pilot-project.html
+++ b/_pages/2017-pilot-project.html
@@ -14,14 +14,14 @@ title: 2017 Pilot Project
 
   <h2>The Process</h2>
 
-  <p class="heavy-margin-bottom">To implement the Graphic Design course and communicate with the children we used projected slides while a teacher helped with translation in sign language. The slides contained simple English sentences but also drawing and images. We were asked to show the slides in English so that would help children learn the language too!</p>
+  <p class="heavy-margin-bottom">To implement the Graphic Design course and communicate with the children, we used projected slides containeding simple English sentences, drawing and other images, while a teacher helped with translation into sign language. We were asked to show the slides in English so that would help children learn the language too!</p>
 
   <img
     alt="TODO"
     class="pure-u-1"
     src="{{ 'assets/img/2017-pilotproject-1.jpg' | relative_url }}">
 
-  <p class="heavy-vertical-margin">The mural course was more about self expression but we also used some help from English speaking tutors to translate the brief. Also we learned to speak basic sign language, which we found really intuitive and interaction was full of expressive gestures and so communication was not an issue but a fun and creative exploration.</p>
+  <p class="heavy-vertical-margin">The mural course was more about self expression, but required the help of English speaking tutors to translate the brief to the children. We learned to use and speak basic sign language, which we found to be very intuitive, with our interactions full of expressive gestures. Clear communication was not an issue, rather but a fun and creative exploration.</p>
 </div>
 
 <img
@@ -30,21 +30,21 @@ title: 2017 Pilot Project
   src="{{ 'assets/img/2017-pilotproject-2.jpg' | relative_url }}">
 
 <div class="content-container">
-  <p class="heavy-vertical-margin">With the visually impaired students it was very interesting workshop. Since we know that the blind students had never participated to an art class but have regular music classes, managed to create a system which would explain the concept of pattern though the idea of music and rhythm. The blind teacher translated from English to Sengalese and adopted our metaphor making a live example of how a pattern would “look like”. When it was time to apply theory in practice, we give each student their piece of paper where we previously had made an embossed grid using glue gun, which would function as a “map” for the students to interact with, into which apply a collage of cut out and textured shapes.</p>
+  <p class="heavy-vertical-margin">With the visually impaired students it was very interesting workshop. Since we kneow that the blind students had never participated to in an art class before, but have regular music classes, together we managed to create a system which explained the concept of pattern though the idea of music and rhythm. The blind teacher translated from English to Sengalese and adopted our metaphor, making a live example of how a pattern would “look like”. When it was time to apply theory into practice, we gaive each student their own sheet of paper on which we had previously had created an embossed grid using a glue gun. This functioned as a “map” for the students to interact with and into which they could apply a collage of cut out and textured shapes.</p>
 
   <img
     alt="TODO"
     class="pure-u-1"
     src="{{ 'assets/img/2017-pilotproject-3.jpg' | relative_url }}">
 
-   <p class="heavy-vertical-margin">As requested by the teacher we also made a few simple glue gun layers of fruit an vegetable and student portraits to be filled with paper collage.</p>
+   <p class="heavy-vertical-margin">As requested by the teacher, we also made a few simple glue gun layers of fruit and vegetables and student portraits to be filled with paper collage.</p>
 
   <img
     alt="TODO"
     class="pure-u-1"
     src="{{ 'assets/img/2017-pilotproject-4.jpg' | relative_url }}">
 
-  <p class="heavy-vertical-margin">At the end of the four weeks we organized an exhibition that showcased all the work done during the courses. Children helped us setting up their drawings and pictures and enjoyed watching their own beautiful artwork on the wall. We were very surprised when the principal, teachers and the kids brought us to the main hall where they had organized a good bye ceremony, in which they talked about the benefits of the workshops and meeting us. We have been given wonderful cards and presents too!</p>
+  <p class="heavy-vertical-margin">At the end of the four weeks, we organized an exhibition that showcased all the work done during the workshops. The children helped us, setting up their drawings and pictures and enjoyed looking at their own beautiful artwork on the wall. We were very surprised when the principal, teachers and the kids brought us to the main hall where they had organized a goodbye ceremony, in which they talked about the benefits of the workshops and meeting us. We have been given wonderful cards and presents too!</p>
 
   <img
     alt="TODO"
