--- a/_pages/index.html
+++ b/_pages/index.html
@@ -23,7 +23,7 @@ layout: default
     <ul>
       <h2>How does Hear We Art work?</h2>
 
-      <p class="no-margin">By improving the knowledge of the teachers and integrating locals with the right vocational skills, give the school the ability to run future workshops and training on their own, in future.</p>
+      <li>By improving the knowledge of the teachers and integrating locals with the right vocational skills, give the school the ability to run future workshops and training on their own, in future.</li>
 
       <li>Using recycled materials such as newspaper, plastic lids, used containers, cardboard therefore learning about eco-friendly art and sustainability.</li>
 
