--- a/_pages/2017-pilot-project.html
+++ b/_pages/2017-pilot-project.html
@@ -8,7 +8,7 @@ title: 2017 Pilot Project
   <h2>2017 Pilot Program</h2>
 
   <img
-    alt="TODO"
+    alt="3rd grade class, Hear We Art 2017"
     class="pure-u-1"
     src="{{ 'assets/img/2017-pilotproject-0.jpg' | relative_url }}">
 
@@ -17,7 +17,7 @@ title: 2017 Pilot Project
   <p class="heavy-margin-bottom">To implement the Graphic Design course and communicate with the children, we used projected slides containeding simple English sentences, drawing and other images, while a teacher helped with translation into sign language. We were asked to show the slides in English so that would help children learn the language too!</p>
 
   <img
-    alt="TODO"
+    alt="Poster Making, Hear We Art 2017"
     class="pure-u-1"
     src="{{ 'assets/img/2017-pilotproject-1.jpg' | relative_url }}">
 
@@ -25,7 +25,7 @@ title: 2017 Pilot Project
 </div>
 
 <img
-  alt="TODO"
+  alt="School Mural, Hear We Art 2017"
   class="pure-u-1"
   src="{{ 'assets/img/2017-pilotproject-2.jpg' | relative_url }}">
 
@@ -33,21 +33,21 @@ title: 2017 Pilot Project
   <p class="heavy-vertical-margin">With the visually impaired students it was very interesting workshop. Since we kneow that the blind students had never participated to in an art class before, but have regular music classes, together we managed to create a system which explained the concept of pattern though the idea of music and rhythm. The blind teacher translated from English to Sengalese and adopted our metaphor, making a live example of how a pattern would “look like”. When it was time to apply theory into practice, we gaive each student their own sheet of paper on which we had previously had created an embossed grid using a glue gun. This functioned as a “map” for the students to interact with and into which they could apply a collage of cut out and textured shapes.</p>
 
   <img
-    alt="TODO"
+    alt="Visually impaired teacher enjoying tactile collage, Hear We Art 2017"
     class="pure-u-1"
     src="{{ 'assets/img/2017-pilotproject-3.jpg' | relative_url }}">
 
    <p class="heavy-vertical-margin">As requested by the teacher, we also made a few simple glue gun layers of fruit and vegetables and student portraits to be filled with paper collage.</p>
 
   <img
-    alt="TODO"
+    alt="Fruit collage with visually impaired students, Hear We Art 2017"
     class="pure-u-1"
     src="{{ 'assets/img/2017-pilotproject-4.jpg' | relative_url }}">
 
   <p class="heavy-vertical-margin">At the end of the four weeks, we organized an exhibition that showcased all the work done during the workshops. The children helped us, setting up their drawings and pictures and enjoyed looking at their own beautiful artwork on the wall. We were very surprised when the principal, teachers and the kids brought us to the main hall where they had organized a goodbye ceremony, in which they talked about the benefits of the workshops and meeting us. We have been given wonderful cards and presents too!</p>
 
   <img
-    alt="TODO"
+    alt="Final Exhibition, Hear We Art 2017"
     class="pure-u-1 heavy-margin-bottom"
     src="{{ 'assets/img/2017-pilotproject-5.jpg' | relative_url }}">
 </div>
