Content update & refactoring

--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -1,9 +1,31 @@
 ---
 permalink: "donate"
-layout: default
+layout: page
 title: Please Donate
 ---
 
+<h1>Hear We Art is totally dependent on donations. To make the 2018 workshops happen we need <a href="#budget">£11,000</a>*</h1>
+
+<p>This will allow us to deliver the workshops to 100 or so children. Please <strong>help us bring joy, fulfilment and potentially transform the life chances of these children</strong>.</p>
+
+<p>Thanks to your support we’ll be able to send three artists and creatives to Sri Lanka and pay for the involvement of several local creatives and craftsmen .We plan to buy four more computers, at £250 each (three were in 2017 and will be used again), ten cameras at £100 each, plus all the related software.</p>
+
+<p>The rest of the budget will be used to buy tools and materials for the workshops (such as stencils, photography materials, wood carving tools etc.).</p>
+
+<p><strong>All the materials purchased for the projects will be left to the school at the end of our activities!</strong></p>
+
+<h2>To donate please <a href="#TODO">click here</a></h2>
+
+<p id="budget">* The above budget includes no provision to help fund the artists for the very substantial time they are spending to design, develop and prepare the workshops and the five weeks spent travelling to and in Sri Lanka.</p>
+
+<h2>To see how to permit the artists  to realise the project, please <a href="#TODO">click here</a></h2>
+
+<h2 class="text-center">Many thanks indeed</h2>
+
+<p id="TODO"></p>
+
+<!--
 <section class="donate">
   <p class="text-center"><strong>Hear We Art</strong> is run by donation, which are 100% directed to help us running our yearly workshops. Scroll down if you want to donate or if you are thinking about joining us!</p>
 </section>
+-->
