--- a/_pages/index.html
+++ b/_pages/index.html
@@ -12,30 +12,26 @@ layout: default
 
 <section class="home-section">
   <div class="content-container">
-    <p class="heavy-margin-top">Hear We Art is a project specifically designed for the hearing and visually impaired, including children from 4 to 18 years old. Our aim is to enrich children skills and abilities in practical art making. Our strong believe is that the arts have the capacity to develop social equity, interdependence and empowerment. It is therefore important that the arts are available to as many young people as possible.</p>
+    <p class="heavy-top-margin">Hear We Art is a charitable project enabling a small group of British, Italian and this year, local Sri Lankan professional artists, designers, other creatives to develop and deliver, once a year, workshops to <strong>poor, deaf Sri Lankan children</strong> aged between 5 and 16 (some of whom are also orphans,) who attend the <a href="https://senkadagaladbs.blogspot.com/">Senkadagala Boarding School</a> in Kandy, Sri Lanka.</p>
 
-    <p class="heavy-margin-bottom">As The UN Convention on the Rights of Persons with Disabilities and Convention on the Rights of the Child says: “access to the arts is a fundamental right for all children and young people, the child has the right to participate freely in cultural life and have equal opportunities for cultural, artistic,recreational and leisure activities.”</p>
+    <p>The workshops consist of  Graphic Design, Photography, Wood Carving and Mural Art, all of which are <strong>seen as priorities by the school</strong>. The teaching methods have been carefully developed to deal with and embrace language differences and communication challenges, so as <strong>allow the children to develop their dormant creative abilities</strong> and <strong>not be inhibited by their</strong> disabilities (for further detail click here).</p>
+
+    <p class="heavy-bottom-margin">Senkadagala school receives state funding and must therefore follow the <strong>national curriculum</strong>, which makes no concession to, and offers no special support for, children with disabilities, consequently, the great majority struggle, leave school with very low educational attainment and with no vocational skills. Combined with their disabilities, this means, <strong>regardless of talent, they are condemned to do the most menial, poorly paid jobs, assuming they are able to find any work at all</strong>.</p>
 
     <section class="youtube">
       <iframe src="https://www.youtube.com/embed/0WuZXDKJ0Ss" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </section>
 
     <ul>
-      <h2>How does Hear We Art work?</h2>
+      <h2>Hear We Art has clearly defined aims, key among which are to:</h2>
 
-      <li>By improving the knowledge of the teachers and integrating locals with the right vocational skills, give the school the ability to run future workshops and training on their own, in future.</li>
+      <li>Help the children acquire vocationally oriented skills and capabilities which are potentially <strong>transformative in terms of their prospects of finding economically worthwhile and fulfilling work</strong>.</li>
 
-      <li>Using recycled materials such as newspaper, plastic lids, used containers, cardboard therefore learning about eco-friendly art and sustainability.</li>
+      <li><strong>Boost the children’s confidence and self-esteem</strong> and at the same time <strong>bring joy, pride and sense of achievement</strong>. Thereby reinforce their commitment to the school.</li>
 
-      <li>Full, hands-on induction for the teachers and pupils to GIMP Graphic Design software, as specifically requested by the school board.</li>
+      <li>Fully involve, train and transfer skills to Senkadagala’s teachers so as to be able progress to a stage where they have the ability to run such programmes on their own.</li>
 
-      <li>This will begin a process of enhancement of the children’s career and employment prospects in Graphic Design. (To be developed in 2018)</li>
-
-      <li>Boost the children’s confidence, self-esteem and sense of commitment to their studies overall, and to the school.</li>
-
-      <li>Have lots of fun and enjoyment. We all know how all kids the world over love technology and ‘getting their hands dirty’!</li>
-
-      <li class="heavy-margin-bottom">Collaborate with people form different cultures and backgrounds. Exchange their creative viewpoint with artists from Rome and London to create an international inspiring collaboration.</li>
+      <li class="heavy-bottom-margin"><strong>Involve local creatives and craftsmen</strong> in the programme, to both promote the objective developing autonomy and help build links to the community which can help children transition to much more worthwhile work.</li>
     </ul>
   </div>
 </section>
@@ -45,31 +41,9 @@ layout: default
 
 <section class="home-section">
   <div class="content-container">
-    <h2>Senkadagala School of Deaf and Blind</h2>
-
-    <p>The Hear We Art workshops has been developed specifically for Senkadagala school for Deaf and Blind children. The school is comprises 87 deafand 5 blind students and was founded in 1962, by a blind teacher, Rienzie Alagiyawanna. It is a public school which gives the children free schooling and free access and to healthcare.</p>
-
-    <p>The school, and therefore the children have to follow the Sri Lankan national curriculum, which includes reading and writing, <strong>as well as</strong> learning deaf language, English and international deaf language. Most of the children struggle to keep-up with theoretical subjects, however, many of them are very talented in art and creative subjects, which unfortunately have no place in the normal curriculum. The children usually leave school with poor academic results because the curriculum is not adapted to their disabilities consequently few are able to get go on to further education. And with little, if any, vocational training, the great majority have to get unskilled, very poorly paid work, if they find anything at all.</p>
-
-    <p class="heavy-margin-bottom">To meet help the children develop and capitalize on their natural creative abilities, the school board have decided to introduce a few afternoon classes led by volunteer tutors in subjects such as computer, photography, graphic design, woodcarving and dress making. But often the teachers have quite limited knowledge and experience of teaching these subjects.</p>
+    <p>Hear We Art piloted the first <a href="{{ site.baseurl }}{% link _pages/projects/2017-pilot-program.html %}">workshops in 2017</a>, which were <strong>judged a great success</strong> by the children, their families, the teachers and <a href="{{ site.baseurl }}{% link _pages/the-school.html %}">the school management</a> all of whom insist we return in 2018!</p>
   </div>
 </section>
 
-<section class="home-section home-section-quote">
-  <div class="content-container">
-    <blockquote class="heavy-margin-top">It is a beautiful workshop tailored for student’s needs and this is something we miss a lot. Students have many benefits and learned a lot about Graphic Design and Mural painting. We hope you come again!</blockquote>
-    <p>Darshi, School manager</p>
-
-    <blockquote>Many people today are complaining about present times, they say that the world is getting worst and people are more selfish forgetting about the true values. Hear We Art is a live proof that this is not true.</blockquote>
-    <p>School Principal Gamage</p>
-
-    <blockquote>Thank you I really liked the course. I learned how many things that are intuitive to me can be actually used in graphic design to make great composition and images and used to sell and decorate products. Please come back and show us more!</blockquote>
-    <p>Student</p>
-
-    <blockquote>This workshop not only gave students practical information but it also set an example for its enthusiastic tutors and the love and passion that has been transmitted with the project. Everybody in the school has been inspired by that.</blockquote>
-    <p class="heavy-margin-bottom">Gamage school director</p>
-  </div>
-</section>
-
-<script src="{{ 'node-assets/rellax/rellax.min.js' | relative_url }}"></script>
+<script src="{{ site.baseurl }}{% link node-assets/rellax/rellax.min.js %}"></script>
 <script>new Rellax('.rellax')</script>
