--- a/_pages/who-we-are.html
+++ b/_pages/who-we-are.html
@@ -6,55 +6,60 @@ title: Who We Are
 
 <div class="bg-light-gray">
   <div class="content-container">
-    <h2>The <em>Hear We Art</em> Team</h2>
+    <h1>The <em>Hear We Art</em> Team</h1>
 
-    <p>We are a group of artists, creatives and designers who working together to create workshops tailored to the needs of students with visual and hearing impairments.</p>
+    <p>We are a group of artists, creatives and designers who work together to create workshops tailored to the needs of students with visual and hearing impairments.</p>
 
-    <p>The Hear We Art project leader is Olga Hendel. The programmes have been developed by Sekme Art Lab (international group fo artist) and Studio Arco (an Italian Ong). The group is is made up of professional creative practitioners and artists with years of experience in teaching disadvantaged young people in UK, Italy, India and Australia. We have joined forces to create a comprehensive set of workshops which include the Arts in many different forms: Graphic Design, Craft Making and Mural Art. Nigel Bartram helped develop and finance the original Hear We Art concept and continues to support the project out of a wish to help, directly, children in need, especially those who must overcome disabilities and require support to have any chance of living a fulfilled life.</p>
-
-    <p class="heavy-margin-bottom">The project is endorsed by Nigel Bartram, a philanthropist who is dedicating his life to help children in need. Nigel is the director of school in Paris and is now working towards setting up a UK charity.</p>
+    <p>The Hear We Art project leader is Olga Hendel. Nigel Bartram helped develop and finance the original Hear We Art concept and Pilot Programme in 2017. He continues to support the project out of a wish to help, directly, children in need, especially those who must overcome disabilities and require support to have any chance of living an independent and fulfilling life.</p>
   </div>
 </div>
 
 <div class="content-container font-weight-light">
 
-  <h4 class="uppercase no-margin-top light-gray font-weight-normal">Project Leader</h4>
+  <h4 class="uppercase light-gray font-weight-normal">Project Leader</h4>
   <h2 class="dark-gray font-weight-normal">Olga Hendel</h2>
 
-  <div class="no-margin heavy-margin-bottom pure-u-1 pure-u-md-1-2">
-    <p class="no-margin">Olga Hendel graduated from Camberwell College of Arts in 2015. She has been working since then as a freelancer artist in Rome. In 2012 she co-founded IdenticonArts, a LdT Community Interest Company, based in London, whose objective is was to work with disadvantaged groups, from young through to the elderly, encouraging self-expression through art and craft making. Among her workshops were the Skills Show at the Birmingham Festival, Art for inclusion in Ukraine and Sp8 of for the Arts London. She also curated a project which produced the QUIET! Magazine, participated in the Homegrown festival in Brixton.</p>
+  <div class="no-margin heavy-bottom-margin pure-u-1 pure-u-md-1-2">
+    <p class="no-margin">Olga graduated from Camberwell College of Arts in 2015 and since then has been working as a freelance artist in Rome. In 2012 she co-founded IdenticonArts, a LdT Community Interest Company, based in London, whose objective is to work with disadvantaged groups, from youngsters through  to the elderly, encouraging self-expression through art and craft making. Among the other workshops she has delivered are the Skills Show at the Birmingham Festival, Art for inclusion in Ukraine and Sp8 for Arts London. She also curated a project which produced QUIET! Magazine, participated in the Homegrown festival in Brixton and  the AR.CO laboratory.</p>
 
-    <p class="no-margin medium-margin-top">In 2016, Olga visited Sri Lanka to look for underprivileged groups of children who could potentially benefit from Art, Handicraft and Design workshops and met the Principal of the Senkadagala School. Discussions led to the development of Hear We Art. In 2017 Olga, led the team (comprising herself, Alessia and Morgan) which piloted the Hear We Art Workshops.</p>
+    <p class="no-margin medium-top-margin">With the support and help of Nigel, in 2016, Olga visited Sri Lanka to look for underprivileged groups of children who could potentially benefit from Art, Handicraft and Design workshops and met the Principal of Senkadagala School. Discussions quickly led to the development of Hear We Art. In 2017 Olga, led the team (comprising herself, Alessia and Morgan – see below) which successfully piloted the first Hear We Art series of workshops.</p>
   </div>
 
   <section class="pure-u-1 pure-u-sm-2-3 pure-u-md-5-12 float-right-md">
     <img
       alt="Olga Hendel"
-      class="pure-u-1 heavy-margin-bottom"
-      src="{{ 'assets/img/olga-hendel.jpg' | relative_url }}">
+      class="pure-u-1 heavy-bottom-margin"
+      src="{{ site.baseurl }}{% link assets/img/olga-hendel.jpg %}">
   </section>
 
   <h4 class="uppercase no-margin-top light-gray font-weight-normal">Graphic Design Tutor</h4>
   <h2 class="dark-gray font-weight-normal">Alessia Arcuri</h2>
 
-  ​<p class="no-margin heavy-margin-bottom pure-u-1 pure-u-md-1-2">Alessia Arcuri is an Italian graphic designer based in London. She graduated with a First Class Honours degree in Graphic and Media Design at from the London College of Communication (University of the Arts) in 2016. Alessia’s design practice is cross-media, both analogue and digital. She currently works on in a variety of fields, including online and offline editorial design, brand identity, web design and animation. She worked as an Assistant Technicians in London College of Communication 3D Workshop during the Spring Semester of 2017 - where she gained further expertise with Laser Cutting Machine, Job Control Pro and Illustrator. She is now working as a Lead Designer and Art Director for Screen Shot Magazine, curating the design for both the online and offline versions of the editorial platform. Alessia also worked for Tate Modern London designing the poster programme for Future Medina Workshop in late 2016. Other clients and collaborations includes: London Science Museum, Jungle Creations and Downstairs Collective.</p>
+  ​<p class="no-margin heavy-bottom-margin pure-u-1 pure-u-md-1-2">Alessia is an Italian graphic designer, based in London. She graduated with a First-Class Honours degree in Graphic and Media Design from the London College of Communication (University of the Arts) in 2016. Alessia’s design practice encompasses both analogue and digital. She works in  a variety of fields, including online and offline editorial design, brand identity, web design and animation. She is currently Lead Designer and Art Director for Screen Shot Magazine, curating the design for both the online and offline versions of the editorial platform. Alessia has also worked for Tate Modern in London, designing the poster programme for Future Medina Workshop in late 2016. Other clients and collaborations includes: London Science Museum, Jungle Creations and Downstairs Collective.</p>
 
   <section class="pure-u-1 pure-u-sm-2-3 pure-u-md-5-12 float-right-md">
     <img
       alt="Alessia Arcuri"
-      class="pure-u-1 heavy-margin-bottom"
-      src="{{ 'assets/img/alessia-arcuri.jpg' | relative_url }}">
+      class="pure-u-1 heavy-bottom-margin"
+      src="{{ site.baseurl }}{% link assets/img/alessia-arcuri.jpg %}">
   </section>
 
   <h4 class="uppercase no-margin-top light-gray font-weight-normal">Art Tutor and Mural Artist</h4>
   <h2 class="dark-gray font-weight-normal">Morganico</h2>
 
-  <p class="no-margin heavy-margin-bottom pure-u-1 pure-u-md-1-2">Morganico is a British artist having who started from a graffiti background as a youth. He has been working in London since 1996, producing large scale public murals for the London councils Boroughs of Southwark, Lambeth and Hillingdon, plus and a variety of other clients & personal street art projects. He is one of the international artists selected to join the prestigious Chelsea Art Club, which set up started in the Victorian time by James McNeil Whistler of the pre-Raphaelites fame. His most recent large scale tree carving sculpture is located outside The Imperial War museum, next to the Tibetan peace garden opened by the Dalai Lama in 1999 , Tthe sculpture is based on the theme of peace also. Morganico also conducts spray paint workshops with school children for entertainment agencies.</p>
+  <p class="no-margin heavy-bottom-margin pure-u-1 pure-u-md-1-2">Morganico is a British artist who started from a graffiti background as a youth. He has been working in London since 1996, producing large scale public murals for the London Boroughs of Southwark, Lambeth and Hillingdon, plus a variety of other clients & personal street art projects. He is one of the artists who has been selected to join the prestigious Chelsea Art Club, which was set up Victorian times by James McNeil Whistler of the pre-Raphaelite fame. His most recent large-scale tree carving sculpture can be seen outside the Imperial War museum.  Morganico also conducts spray paint workshops with school children for entertainment agencies.</p>
 
   <section class="pure-u-1 pure-u-sm-2-3 pure-u-md-5-12 float-right-md">
     <img
       alt="Morganico"
-      class="pure-u-1 heavy-margin-bottom"
-      src="{{ 'assets/img/morganico.jpg' | relative_url }}">
+      class="pure-u-1 heavy-bottom-margin"
+      src="{{ site.baseurl }}{% link assets/img/morganico.jpg %}">
   </section>
+
+  <!--
+    TODO:
+
+    - NICOLE WHITE
+    - NIROSHAN BANDARA
+  -->
 </div>
