--- a/_pages/projects/2017-gallery.html
+++ b/_pages/projects/2017-gallery.html
@@ -21,7 +21,7 @@ css: ['node-assets/lightgallery.js/dist/css/lightgallery.min.css']
 {% endfor %}
 </div>
 
-<script src="{{ site.baseurl }}{% link node-assets/lightgallery.js/dist/js/lightgallery.min.js %}"></script>
+<script src="{{ 'node-assets/lightgallery.js/dist/js/lightgallery.min.js' | relative_url }}"></script>
 
 <script>
 (function (document) {
