--- a/_pages/who-we-are.html
+++ b/_pages/who-we-are.html
@@ -4,7 +4,7 @@ layout: default
 title: Who We Are
 ---
 
-<div class="bg-light-gray">
+<div class="very-light-gray-bg">
   <div class="content-container">
     <h1>The <em>Hear We Art</em> Team</h1>
 
