--- a/_pages/index.html
+++ b/_pages/index.html
@@ -11,6 +11,29 @@ layout: default
 </section>
 
 <section class="home-section">
+  <div class="content-container pure-g">
+    <div class="pure-u-1-3">
+      <div class="light-padding">
+        <p class="light-padding light-border-radius very-light-orange-bg">What is Hear We Art?</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+      </div>
+    </div>
+
+    <div class="pure-u-1-3">
+      <div class="light-padding">
+        <p class="light-padding light-border-radius very-light-orange-bg">News & Activities</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+      </div>
+    </div>
+
+    <div class="pure-u-1-3">
+      <div class="light-padding">
+        <p class="light-padding light-border-radius very-light-orange-bg">Donate</p>
+        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+      </div>
+    </div>
+  </div>
+
   <div class="content-container">
     <p class="heavy-top-margin">Hear We Art is a charitable project enabling a small group of British, Italian and this year, local Sri Lankan professional artists, designers, other creatives to develop and deliver, once a year, workshops to <strong>poor, deaf Sri Lankan children</strong> aged between 5 and 16 (some of whom are also orphans,) who attend the <a href="https://senkadagaladbs.blogspot.com/">Senkadagala Boarding School</a> in Kandy, Sri Lanka.</p>
 
