Who we are content update & restyle, minor fixed

--- a/_pages/contact-us.html
+++ b/_pages/contact-us.html
@@ -12,4 +12,13 @@ title: Contact Us
   <p class="heavy-vertical-margin">
     <a class="dark-blue" href="mailto:{{ site.email }}">{{ site.email }}</a>
   </p>
+
+  <form class="pure-form pure-form-aligned">
+    <fieldset>
+      <div class="pure-control-group">
+        <label for="name">Ciao</label>
+         <input id="name" type="text" placeholder="scrivi qui">
+      </div>
+    </fieldset>
+  </form>
 </section>
