--- a/_pages/who-we-are.html
+++ b/_pages/who-we-are.html
@@ -16,7 +16,8 @@ title: Who We Are
 
 <div class="content-container font-weight-light">
 
-  <h4 class="uppercase light-gray font-weight-normal">Project Leader</h4>
+  <h2 class="uppercase light-gray font-weight-normal">Project Leader</h2>
+
   <h2 class="dark-gray font-weight-normal">Olga Hendel</h2>
 
   <div class="no-margin heavy-bottom-margin pure-u-1 pure-u-md-1-2">
@@ -29,10 +30,11 @@ title: Who We Are
     <img
       alt="Olga Hendel"
       class="pure-u-1 heavy-bottom-margin"
-      src="{{ site.baseurl }}{% link assets/img/olga-hendel.jpg %}">
+      src="{{ 'assets/img/olga-hendel.jpg' | relative_url }}">
   </section>
 
-  <h4 class="uppercase no-margin-top light-gray font-weight-normal">Graphic Design Tutor</h4>
+  <h2 class="uppercase no-margin-top light-gray font-weight-normal">Graphic Design Tutor</h2>
+
   <h2 class="dark-gray font-weight-normal">Alessia Arcuri</h2>
 
   ​<p class="no-margin heavy-bottom-margin pure-u-1 pure-u-md-1-2">Alessia is an Italian graphic designer, based in London. She graduated with a First-Class Honours degree in Graphic and Media Design from the London College of Communication (University of the Arts) in 2016. Alessia’s design practice encompasses both analogue and digital. She works in  a variety of fields, including online and offline editorial design, brand identity, web design and animation. She is currently Lead Designer and Art Director for Screen Shot Magazine, curating the design for both the online and offline versions of the editorial platform. Alessia has also worked for Tate Modern in London, designing the poster programme for Future Medina Workshop in late 2016. Other clients and collaborations includes: London Science Museum, Jungle Creations and Downstairs Collective.</p>
@@ -41,10 +43,11 @@ title: Who We Are
     <img
       alt="Alessia Arcuri"
       class="pure-u-1 heavy-bottom-margin"
-      src="{{ site.baseurl }}{% link assets/img/alessia-arcuri.jpg %}">
+      src="{{ 'assets/img/alessia-arcuri.jpg' | relative_url }}">
   </section>
 
-  <h4 class="uppercase no-margin-top light-gray font-weight-normal">Art Tutor and Mural Artist</h4>
+  <h2 class="uppercase no-margin-top light-gray font-weight-normal">Art Tutor and Mural Artists</h2>
+
   <h2 class="dark-gray font-weight-normal">Morganico</h2>
 
   <p class="no-margin heavy-bottom-margin pure-u-1 pure-u-md-1-2">Morganico is a British artist who started from a graffiti background as a youth. He has been working in London since 1996, producing large scale public murals for the London Boroughs of Southwark, Lambeth and Hillingdon, plus a variety of other clients & personal street art projects. He is one of the artists who has been selected to join the prestigious Chelsea Art Club, which was set up Victorian times by James McNeil Whistler of the pre-Raphaelite fame. His most recent large-scale tree carving sculpture can be seen outside the Imperial War museum.  Morganico also conducts spray paint workshops with school children for entertainment agencies.</p>
@@ -53,13 +56,21 @@ title: Who We Are
     <img
       alt="Morganico"
       class="pure-u-1 heavy-bottom-margin"
-      src="{{ site.baseurl }}{% link assets/img/morganico.jpg %}">
+      src="{{ 'assets/img/morganico.jpg' | relative_url }}">
   </section>
 
-  <!--
-    TODO:
+  <h2 class="dark-gray font-weight-normal">Nicole White</h2>
 
-    - NICOLE WHITE
-    - NIROSHAN BANDARA
-  -->
+  <p class="no-margin heavy-bottom-margin pure-u-1 pure-u-md-1-2">Nicole is a Mural Artist and Storyteller based in Sheffield, England. She is interested in the link between creativity and education, and how to encourage engagement using playful ways of making. She has explored this through through leading workshops, community mural projects, mainstream and alternative school settings in England and Peru, creating art and murals with young people. Currently she is working as a freelance Mural Artist. She painted her first mural in Pisco, Peru for an Earthquake relief organisation called Pisco Sin Fronteras and has been passionate to share the empowerment of mural painting ever since.</p>
+
+  <h2 class="uppercase no-margin-top light-gray font-weight-normal">Graphic Design and 2D Animation Tutor</h2>
+
+  <h2 class="dark-gray font-weight-normal">Niroshan Bandara</h2>
+
+  <div class="no-margin heavy-bottom-margin pure-u-1 pure-u-md-1-2">
+    <p class="no-margin">After graduating from University of Moratuwa in Sri Lanka with a Bachelor of Design in Graphics & Visual Communication, Niroshan spent 03 Years interning in Channel One MTV as a Motion Graphic Artist. During that time, he brainstormed ideas and story concepts with Channel Presentation Creative Team. He drew detailed storyboards that formed the basis for local and international TV advertisements. Television Graphic Themes, 2D / 3D Animation skills. At Channel One MTV, he learned to share ideas, accept criticism and problem-solve in a high-pressured environment.</p>
+
+    <p class="no-margin medium-top-margin">After Resuming from the TV station, currently working as a freelance artist almost 03 Years, for local and international Clients, as well as working as a visiting Lecture for Graphic / web & interactive design/ Animation in several Universities & Academies.</p>
+  </div>
+
 </div>
