Graphic update & link fixes

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -64,9 +64,9 @@ layout: default
 
 <section class="home-section">
   <div class="content-container">
-    <p>Hear We Art piloted the first <a href="{{ site.baseurl }}{% link _pages/projects/2017-pilot-program.html %}">workshops in 2017</a>, which were <strong>judged a great success</strong> by the children, their families, the teachers and <a href="{{ site.baseurl }}{% link _pages/the-school.html %}">the school management</a> all of whom insist we return in 2018!</p>
+    <p>Hear We Art piloted the first <a href="{{ '2017-pilot-program' | relative_url }}">workshops in 2017</a>, which were <strong>judged a great success</strong> by the children, their families, the teachers and <a href="{{ 'the-school' | relative_url }}">the school management</a> all of whom insist we return in 2018!</p>
   </div>
 </section>
 
-<script src="{{ site.baseurl }}{% link node-assets/rellax/rellax.min.js %}"></script>
+<script src="{{ 'node-assets/rellax/rellax.min.js' | relative_url }}"></script>
 <script>new Rellax('.rellax')</script>
