--- a/_pages/the-school.html
+++ b/_pages/the-school.html
@@ -16,7 +16,7 @@ title: The School
 
   <p>To help the children develop and capitalize on their natural creative abilities, the School Board decided to introduce a few afternoon classes, led by volunteer tutors, in subjects such as computing, photography, graphic design, woodcarving and dress making. But often the teachers have quite limited knowledge of and experience in teaching these subjects. Hear We Art’s workshops have been specifically designed and developed, not only to give the pupils much enhanced exposure to these subjects, but also to very significantly up-skill the teachers’ abilities to teach them.</p>
 
-  <h2>What some of the school and kids said about the <a href="{{ site.baseurl }}{% link _pages/projects/2017-pilot-program.html %}">2017 Hear We Art Pilot</a></h2>
+  <h2>What some of the school and kids said about the <a href="{{ '2017-pilot-program' | relative_url }}">2017 Hear We Art Pilot</a></h2>
 </div>
 
 <section class="the-school-section-quote">
